--- a/YuWaShop/Message/Controller/YWMessageViewController.xib
+++ b/YuWaShop/Message/Controller/YWMessageViewController.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -39,7 +39,7 @@
                         <action selector="noLoginBGBtnAvtion:" destination="-1" eventType="touchUpInside" id="vWd-Ix-EWZ"/>
                     </connections>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mesg1" translatesAutoresizingMaskIntoConstraints="NO" id="7MN-mF-uhJ">
+                <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mesg1" translatesAutoresizingMaskIntoConstraints="NO" id="7MN-mF-uhJ">
                     <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                 </imageView>
             </subviews>
