--- a/YuWaShop/Login/YWLoginViewController.xib
+++ b/YuWaShop/Login/YWLoginViewController.xib
@@ -35,24 +35,24 @@
                             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="account" translatesAutoresizingMaskIntoConstraints="NO" id="oHa-96-BtO">
-                            <rect key="frame" x="142.5" y="154" width="16" height="16"/>
+                            <rect key="frame" x="139" y="154" width="16" height="16"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="16" id="AdO-8h-laq"/>
                                 <constraint firstAttribute="width" constant="16" id="GqP-RU-cht"/>
                             </constraints>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="password" translatesAutoresizingMaskIntoConstraints="NO" id="C58-CS-FTL">
-                            <rect key="frame" x="143.5" y="211" width="15" height="18"/>
+                            <rect key="frame" x="140" y="211" width="15" height="18"/>
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zqC-VB-Nav">
-                            <rect key="frame" x="163.5" y="175" width="78" height="1"/>
+                            <rect key="frame" x="160" y="175" width="85" height="1"/>
                             <color key="backgroundColor" red="0.86847764253616333" green="0.86845171451568604" blue="0.86846637725830078" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="ZWG-VM-2Al"/>
                             </constraints>
                         </view>
                         <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I8w-Jf-a22">
-                            <rect key="frame" x="163.5" y="199" width="66" height="30"/>
+                            <rect key="frame" x="160" y="199" width="66" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="G0Y-4f-cvR"/>
                             </constraints>
@@ -64,7 +64,7 @@
                             </connections>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hP8-aN-bE2">
-                            <rect key="frame" x="239.5" y="207" width="30" height="15"/>
+                            <rect key="frame" x="236" y="207" width="30" height="15"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="15" id="Yei-0W-Koi"/>
                                 <constraint firstAttribute="width" constant="30" id="beY-st-voG"/>
@@ -98,7 +98,7 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OWA-L0-jD7">
-                            <rect key="frame" x="163.5" y="228" width="66" height="1"/>
+                            <rect key="frame" x="160" y="228" width="66" height="1"/>
                             <color key="backgroundColor" red="0.86847764253616333" green="0.86845171451568604" blue="0.86846637725830078" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="gRD-UF-iPC"/>
@@ -136,14 +136,15 @@
                             </constraints>
                             <state key="normal" image="weix"/>
                         </button>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入手机号" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="F2J-Ps-4Do">
-                            <rect key="frame" x="163.5" y="145" width="78" height="30"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入手机号" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="F2J-Ps-4Do">
+                            <rect key="frame" x="160" y="145" width="85" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="GEL-lM-AIK"/>
+                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="85" id="HK6-8A-mrg"/>
                             </constraints>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
+                            <textInputTraits key="textInputTraits"/>
                         </textField>
                     </subviews>
                     <color key="backgroundColor" red="1" green="0.99997437000274658" blue="0.99999129772186279" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
