登入界面修改

--- a/YuWaShop/Login/ForgetPassWord/YWForgetPassWordViewController.xib
+++ b/YuWaShop/Login/ForgetPassWord/YWForgetPassWordViewController.xib
@@ -28,17 +28,17 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="code" translatesAutoresizingMaskIntoConstraints="NO" id="6mx-JH-WJn">
-                    <rect key="frame" x="123" y="194" width="22" height="30"/>
+                    <rect key="frame" x="129" y="199.5" width="16" height="19"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="22" id="5OU-gt-sNX"/>
-                        <constraint firstAttribute="height" constant="30" id="BMW-Sz-Oki"/>
+                        <constraint firstAttribute="width" constant="16" id="5OU-gt-sNX"/>
+                        <constraint firstAttribute="height" constant="19" id="BMW-Sz-Oki"/>
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="password" translatesAutoresizingMaskIntoConstraints="NO" id="Uuu-4L-P2m">
-                    <rect key="frame" x="123" y="247" width="22" height="30"/>
+                    <rect key="frame" x="129" y="254" width="16" height="16"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="30" id="S9D-TX-FG1"/>
-                        <constraint firstAttribute="width" constant="22" id="rdB-l2-7bg"/>
+                        <constraint firstAttribute="height" constant="16" id="S9D-TX-FG1"/>
+                        <constraint firstAttribute="width" constant="16" id="rdB-l2-7bg"/>
                     </constraints>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1tD-SV-GcU">
@@ -63,12 +63,12 @@
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="EbS-WY-vKV"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FCb-su-6uG">
-                    <rect key="frame" x="255" y="196" width="72" height="20"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FCb-su-6uG">
+                    <rect key="frame" x="255" y="196" width="67" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="pM3-KN-rP7"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <state key="normal" title="获取验证码">
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
@@ -108,11 +108,7 @@
                     </connections>
                 </textField>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="account" translatesAutoresizingMaskIntoConstraints="NO" id="zkz-KX-NPa">
-                    <rect key="frame" x="123" y="142" width="22" height="22"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="22" id="0hQ-p4-fYi"/>
-                        <constraint firstAttribute="height" constant="22" id="7TB-XM-X55"/>
-                    </constraints>
+                    <rect key="frame" x="129" y="145" width="16" height="16"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C6t-zz-a3Q">
                     <rect key="frame" x="0.0" y="397" width="375" height="1"/>
@@ -219,7 +215,7 @@
     </objects>
     <resources>
         <image name="Tencent_QQ" width="24" height="29"/>
-        <image name="account" width="17" height="18"/>
+        <image name="account" width="16" height="16"/>
         <image name="code" width="13" height="27"/>
         <image name="loginbg" width="750" height="1334"/>
         <image name="password" width="15" height="18"/>
